# OpenStory

./: .gitignore  CMakeLists.txt  README.md
Character/: Job.h
Graphics/: Color.cpp  Color.h
IO/: UIStateLogin.cpp  Window.h
IO/Components/: Slider.cpp
IO/UITypes/: UILogin.cpp
Util/: NxFiles.h
src/: Configuration.h
src/Character/: EquipStat.h  ExpTable.h
src/Character/Inventory/: Equip.h
src/Gameplay/: Camera.cpp
src/Gameplay/Physics/: PhysicsObject.h
src/IO/: UI.cpp  UIStateLogin.cpp  Window.cpp
src/IO/UITypes/: UIAranCreation.cpp  UICharSelect.cpp  UICygnusCreation.cpp  UIExplorerCreation.cpp  UILogin.cpp  UILogin.h
src/Util/: NxFiles.cpp  NxFiles.h
